fix(slider): remove z-index: 999

--- a/src/app/home/slider/slider.component.scss
+++ b/src/app/home/slider/slider.component.scss
@@ -108,7 +108,6 @@ ngx-siema-slide {
   margin: auto;
   position: absolute;
   right: 0;
-  z-index: 999;
 
   .slider-paging-button {
     $size: 10px;
